base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capstone-app-stable
  labels:
    app: capstone-app
spec:
  selector:
    app: capstone-app
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: capstone-app-canary
  labels:
    app: capstone-app
spec:
  selector:
    app: capstone-app
  ports:
    - port: 80
      targetPort: 8080
